--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
-    
+    <div id = "home">
+      fd
+    </div>
   </body>
 </html>
