--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id = "home">
-      fd
+      <div class = "welcomeBox">
+        <h1>Welcome to your task manager</h1>
+        <div class = "btn lightBlue">
+          Enter
+        </div>
+      </div>
     </div>
   </body>
 </html>
