committing changes from "build a responsive web app" -"build the homepage"(video 2)

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
     <div id = "home">
       <div class = "welcomeBox">
         <h1>Welcome to your task manager</h1>
-        <div class = "btn lightBlue">
-          Enter
-        </div>
+        <a href = "taskIndex.html">
+          <div class = "btn lightBlue">
+            Enter
+          </div>
+        </a>
       </div>
     </div>
   </body>
