--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div id = "home">
       <div class = "welcomeBox">
         <h1>Welcome to your task manager</h1>
-        <a href = "taskIndex.html">
+        <a href = "allTask.html">
           <div class = "btn lightBlue">
             Enter
           </div>
