committing code from (code the comment area) video 4,  added checkbox and date to todoApp

--- a/public/allTask.html
+++ b/public/allTask.html
@@ -36,14 +36,26 @@
       <section class = "contentArea">
         <div class = "container">
           <div class = "tasksContainer">
-            <div class = " taskBox">
+            <div class = "taskBox">
               <div class = "title">
                 Clean Room
               </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
             </div>
-            <div class = " taskBox">
+            <div class = "taskBox">
               <div class = "title">
                 Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
               </div>
             </div>
           </div>
