adding files completed in last video (code the content area)

--- a/public/allTask.html
+++ b/public/allTask.html
@@ -61,7 +61,26 @@
           </div>
         </div>
       </section>
+
+      <section class = "taskForm">
+        <form>
+          <label>Add Title</label>
+          <input type = "text" />
+        </form>
+      </section>
     </div>
 
+    <script
+    src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+    crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function(){
+        $('.addCircle').on('click', function(){
+          console.log('show me the popup')
+        })
+      })
+    </script>
   </body>
+
 </html>
