completed (Add a form) in (Build a responsive website) on codingPhase, committing now

--- a/public/allTask.html
+++ b/public/allTask.html
@@ -58,6 +58,83 @@
                   <i class="fas fa-check"></i>
               </div>
             </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class = "taskBox">
+              <div class = "title">
+                Clean Room
+              </div>
+              <div class = "date">
+                Created: December 3rd, 2019
+              </div>
+              <div class = "checkBox">
+                  <i class="fas fa-check"></i>
+              </div>
+            </div>
           </div>
         </div>
       </section>
